# nyc-taxi-pipeline

./: .gitignore  CONFIG_SUMMARY.md  DEPLOYMENT.md  README.md  databricks.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_test.py
.github/workflows/: ci-cd.yml
explorations/: layer_exploration.py
pipeline/explorations/: layer_exploration.py
pipeline/transformations/: __init__.py  bronze_layer.py  gold_layer.py  silver_layer.py
resources/: nyc_taxi_pipeline.pipeline.yml  test.job.yml
src/pipeline/: __init__.py  pipeline.py
src/pipeline/bronze/: bronze_layer.py
src/pipeline/gold/: gold_layer.py  gold_pipelines.py
src/pipeline/silver/: silver_layer.py  silver_pipelines.py
src/pipeline/utils/: __init__.py  aggregations.py  calculations.py  constraints.py  spark_session.py  transformations.py  validations.py
tests/: README.md  __init__.py  conftest.py  run_test.py  test_gold_layer.py  test_silver_layer.py
tests/integration/: __init__.py  conftest.py  run_integration.py  test_pipeline_sample.py
tests/test_gold_layer/: test_gold_layer_sample.py  test_silver_layer_sample.py
tests/unit/: __init__.py  conftest.py  test_gold_layer_sample.py  test_silver_layer_sample.py
